--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>تسجيل الدخول - بوابة الفاتورة الإلكترونية المصرية</title>
+  <title>تسجيل الدخول - برنامج الفاتورة الالكترونية </title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Cairo&display=swap"
